# minuta

./: .gitignore  LICENSE  Makefile  README.md  config.example.toml  install.sh
.claude/: launch.json
.claude/skills/minuta/: SKILL.md
Minuta.app/Contents/: Info.plist
Minuta.app/Contents/MacOS/: MeetingScribe  Minuta
audiocap/: Package.swift
audiocap/Sources/audiocap/: AudioCap.swift  AudioCapture.swift  Permissions.swift  Protocol.swift  SocketClient.swift
backend/: README.md  pyproject.toml
backend/src/minuta/: __init__.py  __main__.py  cli.py
backend/src/minuta/db/: engine.py  repository.py
backend/src/minuta/server/: app.py  deps.py
backend/src/minuta/server/routers/: config.py  health.py  license.py  meetings.py  summaries.py  transcripts.py  ws.py
backend/src/minuta/services/: audio_manager.py  license.py  meeting_manager.py  summarizer.py  transcriber.py  transcript_hub.py  vad.py  webhook.py
backend/src/minuta/tray/: app.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/(dashboard)/: layout.tsx  page.tsx
frontend/src/app/(dashboard)/meetings/: page.tsx
frontend/src/app/(dashboard)/meetings/[id]/: page.tsx
frontend/src/app/(dashboard)/record/: page.tsx
frontend/src/app/(dashboard)/settings/: page.tsx
frontend/src/components/: pro-gate.tsx
frontend/src/components/layout/: app-sidebar.tsx  topbar.tsx
frontend/src/lib/: api.ts  format.ts  store.ts
landing/: index.html
landing/deploy/: Dockerfile  deploy.sh  docker-compose.yml  nginx.conf
