[project]
name = "minuta"
version = "0.1.0"
description = "Meeting transcription and summarization tool for macOS"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<0.116",
    "uvicorn[standard]>=0.34.0,<0.35",
    "pydantic>=2.10.0,<3",
    "pydantic-settings>=2.7.0,<3",
    "aiosqlite>=0.20.0,<0.21",
    "mlx>=0.22.0",
    "mlx-whisper>=0.4.0",
    "numpy>=2.0.0,<3",
    "onnxruntime>=1.20.0,<1.21",
    "httpx>=0.28.0,<0.29",
    "openai>=1.58.0,<2",
    "rumps>=0.4.0,<0.5",
    "click>=8.1.0,<9",
    "tomli-w>=1.1.0,<2",
    "websockets>=14.0,<15",
    "sounddevice>=0.5.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8.0",
    "httpx",
]

[project.scripts]
minuta = "minuta.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/minuta"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
